--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/express-serve-static-core": "4.17.28",
     "@types/fast-json-stable-stringify": "2.0.0",
     "@types/jest": "27.4.1",
+    "@types/keyv": "^3.1.3",
     "@types/lodash": "4.14.179",
     "@types/lodash.sortby": "4.7.6",
     "@types/lodash.sumby": "4.6.6",
@@ -64,7 +65,6 @@
     "@types/type-is": "1.6.3",
     "@types/uuid": "8.3.4",
     "@vendia/serverless-express": "4.5.4",
-    "apollo-server-caching": "3.3.0",
     "awaiting": "3.0.0",
     "body-parser": "1.19.2",
     "bunyan": "1.8.15",
